CHANGES IN VERSION 2.0.0
------------------------

NOTE ON VERSION NUMBER
    Version 1.x.x was skipped to distinguish between the original R scripts
    and the KeyGenes package.

MODIFICATIONS

    o keygenes.NGS now adds a confidence column to the results table. This
      column will show if the prediction is high or low confidence.
    o The vignette was modified to be more clear.
    o Added description on getting gene symbols to vignette.
    o The training.data object now contains the following alternative names 
      for genes:
        o HGNC id
        o gene symbol
    o The samples labeled as gonad in the training.data object have been
      separated into ovary and testes.
    o The samples labeled as heart A and heart V have be relabeled as
      heart.