@@ -2,7 +2,7 @@ Package: KeyGenes
 Type: Package
 Title: Transciptional profile based sample class (tissue) identification
 Version: 2.0.0
-Date: 2019-04-12
+Date: 2020-06-10
 Authors@R: c(
 	person("Mathias", "Roost", role=c("aut")),
 	person("Davy", "Cats", email="d.cats@lumc.nl", role=c("cre", "aut")),
