@@ -7,6 +7,8 @@ NOTE ON VERSION NUMBER
 
 MODIFICATIONS
 
+    o keygenes.NGS should now work when the test data only contains one 
+      sample.
     o keygenes.NGS now adds a confidence column to the results table. This
       column will show if the prediction is high or low confidence.
     o The vignette was modified to be more clear.
